--- a/Castle/templates/users/register.html
+++ b/Castle/templates/users/register.html
@@ -3,30 +3,66 @@
 {% block mainbody %}
 
     <div class="row m-3">
-        <div class="col-sm-5 col-centered login-column red-background border-shadow">
+        <div class="col-sm-10 col-centered login-column red-background border-shadow">
             <div class="card border-shadow">
-                <div class="card-body">
-                    <form>
-                        <div class="form-group">
-                            <strong class="username-label">Username </strong>
-                            <input type="text" class="user_input" id="search_address" placeholder="Username">
-                        </div>
-                        <div class="form-group">
-                            <strong class="password-label">Password </strong>
-                            <input type="text" class="user_input" id="search_address" placeholder="Password">
-                        </div>
-                        <div class="forgot-password-label">
-                            <a href="/users/forgot_pass">Forgot password</a>
-                        </div>
-                        <div class="form-row text-center">
-                            <div class="form-group col-6">
-                                <button class="btn red-button">Register</button>
-                            </div>
-                            <div class="form-group col-6">
-                                <button type="submit" class="btn green-button">Login</button>
-                            </div>
-                        </div>
-                    </form>
+                <div style="padding-left:5%; padding-top:3%;" class="card-body">
+                    <h5 style="color:#5F1C1C; margin-bottom:5%;">Register new user</h5>
+                    <form class="form-horizontal" role="form">
+                <div class="form-group">
+                    <label for="firstName" class="col-sm-3 control-label">Name</label>
+                    <div class="col-sm-9">
+                        <input type="text" id="firstName" class="form-control" autofocus>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="lastName" class="col-sm-3 control-label">Username</label>
+                    <div class="col-sm-9">
+                        <input type="text" id="lastName" class="form-control" autofocus>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="email" class="col-sm-3 control-label">Phone</label>
+                    <div class="col-sm-9">
+                        <input type="email" id="email" class="form-control" name= "email">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="password" class="col-sm-3 control-label">Email</label>
+                    <div class="col-sm-9">
+                        <input type="password" id="password" class="form-control">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="password" class="col-sm-3 control-label">Password</label>
+                    <div class="col-sm-9">
+                        <input type="password" id="password" class="form-control">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="birthDate" class="col-sm-3 control-label">Repeat password</label>
+                    <div class="col-sm-9">
+                        <input type="password" id="password" class="form-control">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="phoneNumber" class="col-sm-3 control-label">Security question</label>
+                    <div class="col-sm-9">
+                        <input type="phoneNumber" id="phoneNumber" class="form-control">
+                    </div>
+                </div>
+                <div class="form-group">
+                        <label for="Height" class="col-sm-3 control-label">Answer</label>
+                    <div class="col-sm-9">
+                        <input style="margin-bottom:5%;"type="text" class="form-control">
+                    </div>
+                </div><!-- /.form-group -->
+                <div class="form-group">
+                    <div class="col-sm-9 col-sm-offset-3">
+                    </div>
+                </div>
+                <button type="reset" class="red-button" >Cancel</button>
+                <button type="submit" class="green-button">Register</button>
+            </form> <!-- /form -->
                 </div>
             </div>
         </div>
