--- a/Castle/templates/apartments/single_apartment.html
+++ b/Castle/templates/apartments/single_apartment.html
@@ -1,4 +1,4 @@
-<div class="col-md-4 col-lg-3 col-12 col-sm-6 single-apartment" style="padding:1rem">
+<div data-address="{{ apartment.address }}" data-price="{{ apartment.price }}" class="col-md-4 col-lg-3 col-12 col-sm-6 single-apartment" style="padding:1rem">
     <div class="gray-background border-shadow">
        <div class="card bg-custom border-shadow text-white" style="text-align:left">
            <a href="{{ apartment.id }}"><img class="card-img-top" src="{{ apartment.main_pic }}" alt="apartment pic"></a>
