Prep for authentication and minor fixes to register

--- a/Castle/templates/users/register.html
+++ b/Castle/templates/users/register.html
@@ -21,15 +21,15 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="email" class="col-sm-12 control-label">Phone</label>
+                    <label for="phone" class="col-sm-12 control-label">Phone</label>
                     <div class="col-sm-9">
-                        <input type="email" placeholder="Phone" class="form-control" name= "email">
+                        <input type="tel" placeholder="Phone" class="form-control" name= "phone">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="password" class="col-sm-12 control-label">Email</label>
+                    <label for="email" class="col-sm-12 control-label">Email</label>
                     <div class="col-sm-9">
-                        <input type="password" placeholder="Email" class="form-control">
+                        <input type="email" name="email" placeholder="Email" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
