--- a/Castle/templates/apartments/apartment_info.html
+++ b/Castle/templates/apartments/apartment_info.html
@@ -2,9 +2,110 @@
 
 {% block mainbody %}
 
-    <div class="gray-background border-shadow">
-        <img src="{{ apartment.main_pic }}" alt="apartment pic">
+    <div class="w-100 gray-background border-shadow">
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-9">
+                <div id="carousel-thumb" class="carousel slide carousel-fade" data-ride="carousel">
+                    <!--Slides-->
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="{{ apartment.main_pic }}" alt="apartment pic">
+                        </div>
+
+                        {% for img in apartment.apartment_images_set.values %}
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="{{ img.image }}" alt="apartment pic">
+                            </div>
+                        {% endfor %}
+                    </div>
+                    <!--/.Slides-->
+                    <!--Controls-->
+                    <a class="carousel-control-prev" href="#carousel-thumb" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carousel-thumb" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-thumb" data-slide-to="0" class="active">
+                            <img src="{{ apartment.main_pic }}" alt="apartment pic" width="100">
+                        </li>
+
+                        {% for img in apartment.apartment_images_set.values %}
+                            <li data-target="#carousel-thumb" data-slide-to="{{ forloop.counter }}">
+                                <img src="{{ img.image }}" alt="apartment pic" width="100">
+                            </li>
+                        {% endfor %}
+                    </ol>
+                </div>
+            </div>
+        </div>
     </div>
+
+
+
+{#    <div id='carousel-custom' class='carousel slide' data-ride='carousel'>#}
+{#        <!-- Wrapper for slides -->#}
+{#        <div class='carousel-inner'>#}
+{#            <div class='carousel-item active'>#}
+{#                <img src='http://placehold.it/400x200&text=slide1' alt='' />#}
+{#            </div>#}
+{#            <div class='carousel-item'>#}
+{#                <img src='http://placehold.it/400x200&text=slide2' alt='' />#}
+{#            </div>#}
+{#            <div class='carousel-item'>#}
+{#                <img src='http://placehold.it/400x200&text=slide3' alt='' />#}
+{#            </div>#}
+{##}
+{#            <div class='carousel-item'>#}
+{#                <img src='http://placehold.it/400x200&text=slide4' alt='' />#}
+{#            </div>#}
+{#            <div class='carousel-item'>#}
+{#                <img src='http://placehold.it/400x200&text=slide5' alt='' />#}
+{#            </div>#}
+{#            <div class='carousel-item'>#}
+{#                <img src='http://placehold.it/400x200&text=slide6' alt='' />#}
+{#            </div>#}
+{##}
+{#            <div class='carousel-item'>#}
+{#                <img src='http://placehold.it/400x200&text=slide7' alt='' />#}
+{#            </div>#}
+{#            <div class='carousel-item'>#}
+{#                <img src='http://placehold.it/400x200&text=slide8' alt='' />#}
+{#            </div>#}
+{#            <div class='carousel-item'>#}
+{#                <img src='http://placehold.it/400x200&text=slide9' alt='' />#}
+{#            </div>#}
+{##}
+{#            <!-- Controls -->#}
+{#            <a class='left carousel-control' href='#carousel-custom' data-slide='prev'>#}
+{#                <span class='glyphicon glyphicon-chevron-left'></span>#}
+{#            </a>#}
+{#            <a class='right carousel-control' href='#carousel-custom' data-slide='next'>#}
+{#                <span class='glyphicon glyphicon-chevron-right'></span>#}
+{#            </a>#}
+{##}
+{#        </div>#}
+{##}
+{#    <!-- Indicators -->#}
+{#    <ol class='carousel-indicators'>#}
+{#        <li data-target='#carousel-custom' data-slide-to='0' class='active'><img src='http://placehold.it/100x50&text=slide1' alt='' /></li>#}
+{#        <li data-target='#carousel-custom' data-slide-to='1'><img src='http://placehold.it/100x50&text=slide2' alt='' /></li>#}
+{#        <li data-target='#carousel-custom' data-slide-to='2'><img src='http://placehold.it/100x50&text=slide3' alt='' /></li>#}
+{#        <li data-target='#carousel-custom' data-slide-to='3'><img src='http://placehold.it/100x50&text=slide4' alt='' /></li>#}
+{#        <li data-target='#carousel-custom' data-slide-to='4'><img src='http://placehold.it/100x50&text=slide5' alt='' /></li>#}
+{#        <li data-target='#carousel-custom' data-slide-to='5'><img src='http://placehold.it/100x50&text=slide6' alt='' /></li>#}
+{#        <li data-target='#carousel-custom' data-slide-to='6'><img src='http://placehold.it/100x50&text=slide7' alt='' /></li>#}
+{#        <li data-target='#carousel-custom' data-slide-to='7'><img src='http://placehold.it/100x50&text=slide8' alt='' /></li>#}
+{#        <li data-target='#carousel-custom' data-slide-to='8'><img src='http://placehold.it/100x50&text=slide9' alt='' /></li>#}
+{#    </ol>#}
+{#</div>#}
+
+
     <h5>{{ apartment.address }} {{ apartment.zip_code }}</h5>
     <p>{{ apartment.price }}</p>
     <p>{{ apartment.size }} sqm</p>
