--- a/Castle/templates/sellers/single_seller.html
+++ b/Castle/templates/sellers/single_seller.html
@@ -2,7 +2,7 @@
     <div class="card white-background border-shadow">
         <div class="card-body row p-0">
             <div class="col-3">
-                <img src="{{ seller.logo }}" class="img-thumbnail simple-border" alt="seller logo">
+                <img src="{{ seller.logo }}" class="img-thumbnail simple-border" style="width:100%" alt="seller logo">
             </div>
             <div class="col-4">
                 <h5><a href="{{ seller.id }}">{{ seller.user.name }}</a></h5>
