search by price and search by square meters

--- a/Castle/static/css/style.css
+++ b/Castle/static/css/style.css
@@ -269,6 +269,6 @@ html {
 body {
   position: relative;
   margin: 0;
-  padding-bottou    huirem: 6rem;
+  padding-bottom: 6rem;
   min-height: 100%;
 }
