--- a/Castle/templates/apartments/apartment_list.html
+++ b/Castle/templates/apartments/apartment_list.html
@@ -69,7 +69,7 @@
     <div class="m-3 simple-border">
         <div class="row mx-2">
             <div class="col-6" style="line-height:3">
-                <p style="margin:0">Apartments found: {{ apartments|length }}</p>
+                <p id="apartmentsFound" style="margin:0">Apartments found: {{ apartments|length }}</p>
             </div>
             <div class="col-6" style="text-align:right">
                 <p id="order_by_text" for="order_by" style="display:inline-block;">Order by</p>
