--- a/Castle/templates/users/register.html
+++ b/Castle/templates/users/register.html
@@ -9,17 +9,17 @@
                     <h5 style="color:#5F1C1C; margin-bottom:5%;">Register new user</h5>
                     <form class="form-horizontal" role="form" method="POST">
                         {% csrf_token %}
-                        {{ form }}
+
                 <div class="form-group">
                     <label for="firstName" class="col-sm-12 control-label">Name</label>
                     <div class="col-sm-9">
-                        <input type="text" placeholder="Name" class="form-control" autofocus>
+                        <input type="text" name="name" placeholder="Name" class="form-control" autofocus>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="lastName" class="col-sm-12 control-label">Username</label>
                     <div class="col-sm-9">
-                        <input type="text" placeholder="Username" class="form-control" autofocus>
+                        <input type="text" name="user_name" placeholder="Username" class="form-control" autofocus>
                     </div>
                 </div>
                 <div class="form-group">
@@ -37,7 +37,7 @@
                 <div class="form-group">
                     <label for="password" class="col-sm-12 control-label">Password</label>
                     <div class="col-sm-9">
-                        <input type="password" placeholder="Password" class="form-control">
+                        <input type="password" name="password" placeholder="Password" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
