adding zip code model and town names

--- a/Castle/templates/apartments/apartment_info.html
+++ b/Castle/templates/apartments/apartment_info.html
@@ -106,7 +106,7 @@
 {#</div>#}
 
 
-    <h5>{{ apartment.address }} {{ apartment.zip_code }}</h5>
+    <h5>{{ apartment.address }} {{ apartment.zip_code.id }} {{ apartment.zip_code.town }}</h5>
     <p>{{ apartment.price }}</p>
     <p>{{ apartment.size }} sqm</p>
     <p>Rooms: {{ apartment.rooms }}</p>
