--- a/Castle/templates/apartments/home.html
+++ b/Castle/templates/apartments/home.html
@@ -90,7 +90,7 @@
             <div class="card new_apartment bg-custom border-shadow text-white" style="text-align:left">
                 <a href="apartments/{{ apartment.id }}"><img class="card-img-top" src="{{ apartment.main_pic }}" alt="apartment pic"></a>
                 <div class="card-body">
-                    <h5 class="card-title"><a href="apartments/{{ apartment.id }}">{{ apartment.address }} {{ apartment.zip_code }}</a></h5>
+                    <h5 class="card-title"><a href="apartments/{{ apartment.id }}">{{ apartment.address }} {{ apartment.zip_code.id }}</a></h5>
                     <p>{{ apartment.price }} ISK</p>
                     <div class="d-flex justify-content-between">
                         <div>
