search engine from home page and other changes

--- a/Castle/templates/apartments/home.html
+++ b/Castle/templates/apartments/home.html
@@ -63,7 +63,7 @@
 						<div class="form-row">
 							<div class="form-group col-12" style="text-align: right">
 								<button id="clearFormButton" class="btn red-button">Clear</button>
-								<button id="submitFormButton" type="submit" class="btn green-button">Search</button>
+								<button id="submitFormHomeButton" type="submit" class="btn green-button">Search</button>
 							</div>
 						</div>
 					</form>
