improved styling for homepage

--- a/Castle/static/css/style.css
+++ b/Castle/static/css/style.css
@@ -64,6 +64,9 @@
     margin-top: 0.25rem;
     margin-bottom: 0.5rem;
 }
+.newest_apartments {
+    box-sizing: border-box;
+}
 .login-column {
     float:none;
     margin:0 auto;
